@@ -61,6 +61,7 @@ struct _TnyMimePartIface
 	void (*get_parts_func) (TnyMimePart *self, TnyList *list);
 	void (*del_part_func) (TnyMimePart *self, TnyMimePart *part);
 	gint (*add_part_func) (TnyMimePart *self, TnyMimePart *part);
+	TnyMimePart* (*get_content_object_func) (TnyMimePart *self);
 };
 
 GType tny_mime_part_get_type (void);
@@ -84,6 +85,7 @@ void tny_mime_part_decode_to_stream (TnyMimePart *self, TnyStream *stream);
 void tny_mime_part_get_parts (TnyMimePart *self, TnyList *list);
 gint tny_mime_part_add_part (TnyMimePart *self, TnyMimePart *part);
 void tny_mime_part_del_part (TnyMimePart *self, TnyMimePart *part);
+TnyMimePart* tny_mime_part_get_content_object (TnyMimePart *self);
 
 G_END_DECLS
 
