@@ -1,3 +1,9 @@
+2006-12-01  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Support for content-objects in RFC822 messages
+
+	* This was a major API change
+
 2006-11-30  Sergio Villar Senin <svillar@igalia.com>
 	* libtinymail-camel/tny-camel-common.c: a store query with no items
 	filters nothing
